--- a/crickeTServer-ejb/nbproject/project.properties
+++ b/crickeTServer-ejb/nbproject/project.properties
@@ -34,7 +34,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=crickeTServer-ejb.jar
-javac.classpath=
+javac.classpath=\
+    ${reference.cricketDTO.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=${javac.classpath}
@@ -59,6 +60,8 @@ javadoc.windowtitle=
 meta.inf=${source.root}/conf
 meta.inf.excludes=sun-cmp-mappings.xml
 platform.active=default_platform
+project.cricketDTO=../crickeT/cricketDTO
+reference.cricketDTO.jar=${project.cricketDTO}/dist/cricketDTO.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
