Adicao DTO's e SessionContext

--- a/crickeTServer-ejb/nbproject/project.properties
+++ b/crickeTServer-ejb/nbproject/project.properties
@@ -60,7 +60,7 @@ javadoc.windowtitle=
 meta.inf=${source.root}/conf
 meta.inf.excludes=sun-cmp-mappings.xml
 platform.active=default_platform
-project.cricketDTO=../crickeT/cricketDTO
+project.cricketDTO=../cricketDTO
 reference.cricketDTO.jar=${project.cricketDTO}/dist/cricketDTO.jar
 resource.dir=setup
 run.test.classpath=\
