--- a/cricketWeb/nbproject/project.properties
+++ b/cricketWeb/nbproject/project.properties
@@ -73,7 +73,7 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.cricketDTO=../crickeT/cricketDTO
+project.cricketDTO=../cricketDTO
 reference.cricketDTO.jar=${project.cricketDTO}/dist/cricketDTO.jar
 resource.dir=setup
 run.test.classpath=\
