--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -1,5 +1,7 @@
 IntroSignInSignUp=Hello there! Sign in or Sign up in CrickeT! Click in button bellow.
 SignInSignUp=Sign In / Sign Up
+SignInSignUpDesc=Sign In or Sign Up in CrickeT! After signed in you will be able to manage your own goals everywhere! Just need a smartphone, tablet or a computer!
+
 SignIn=Sign In
 SignUp=Sign Up
 UserEmail= E-mail
