Entitdades, Facades e Bridge criados

--- a/cricketWeb/nbproject/project.properties
+++ b/cricketWeb/nbproject/project.properties
@@ -43,7 +43,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.cricketDTO.jar}
+    ${reference.cricketDTO.jar}:\
+    ${reference.crickeTServer-ejb.dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -74,7 +75,9 @@ no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.cricketDTO=../cricketDTO
+project.crickeTServer-ejb=../crickeTServer-ejb
 reference.cricketDTO.jar=${project.cricketDTO}/dist/cricketDTO.jar
+reference.crickeTServer-ejb.dist=${project.crickeTServer-ejb}/dist/crickeTServer-ejb.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
