--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /cricketDTO/nbproject/private/
 /cricketDTO/build/
 /cricketDTO/dist/
+/nbproject/private/
+/cricketWeb/nbproject/private/
+/crickeTServer-ejb/nbproject/private/
+/crickeTServer-ejb/build/
+/crickeTServer-ejb/dist/
+/build/
+/cricketWeb/build/
+/dist/
+/cricketWeb/dist/
