--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /cricketDTO/nbproject/private/
 /cricketDTO/build/
 /cricketDTO/dist/
+/dist/
+/crickeTServer-ejb/build/
+/crickeTServer-ejb/dist/
+/build/
+/cricketWeb/build/
+/cricketWeb/dist/
