INiciado o create de objetivos Fabrica de DTOs iniciada

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -16,3 +16,17 @@ GoalListFiltersButton=Filters
 GoalListDesc=Here you can access and manage all your goals. You also can filter your goals. Press the next button to see all possible filters.
 
 FilterGoalName=Goal Name
+
+EmptyListGoals=You don't have any goal. Add your first! Click on plus button!
+
+CreateGoalTitle= Create your Goal.
+CreateGoalDesc= Define your goal as you want.
+
+GoalName=Goal Name
+GoalType=Type
+GoalCategory=Category
+GoalStatus=Status
+GoalDescription=Description
+GoalStartDate=Start Date
+GoalFinalDate=Start Date
+GoalTotalValue=Total
