melhoria interface, inicio do desenvolvimento da backend para criar objetivo(não concluido ainda)

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -1,7 +1,7 @@
 IntroSignInSignUp=Hello there! Sign in or Sign up in CrickeT! Click in button bellow.
 SignInSignUp=Sign In / Sign Up
 SignInSignUpDesc=Sign In or Sign Up in CrickeT! After signed in you will be able to manage your own goals everywhere! Just need a smartphone, tablet or a computer!
-
+AddGoal=Add Goal
 SignIn=Sign In
 SignUp=Sign Up
 UserEmail= E-mail
@@ -28,5 +28,6 @@ GoalCategory=Category
 GoalStatus=Status
 GoalDescription=Description
 GoalStartDate=Start Date
-GoalFinalDate=Start Date
-GoalTotalValue=Total
+GoalFinalDate=Final Date
+GoalTotalValue=Total Value
+GoalFavorite= Favorite
