Campo "frequency" da bd adicionado erro corrigido do set flag_order (so fazia no signin)

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -24,6 +24,7 @@ CreateGoalDesc= Define your goal as you want.
 
 GoalName=Goal Name
 GoalType=Type
+GoalFrequency=Frequency
 GoalCategory=Category
 GoalStatus=Status
 GoalDescription=Description
