edit goal front end feito

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -22,6 +22,10 @@ EmptyListGoals=You don't have any goal. Add your first! Click on plus button!
 CreateGoalTitle= Create your Goal.
 CreateGoalDesc= Define your goal as you want.
 
+EditGoalTitle= Edit your Goal.
+EditGoalDesc= Edit your goal as you want.
+EditGoal=Edit Goal
+
 GoalName=Goal Name
 GoalType=Type
 GoalFrequency=Frequency
