edit e remove goal front end feito

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -26,6 +26,10 @@ EditGoalTitle= Edit your Goal.
 EditGoalDesc= Edit your goal as you want.
 EditGoal=Edit Goal
 
+RemoveGoal=Remove Goal
+RemoveGoalDesc= Do you really want remove the goal?
+
+
 GoalName=Goal Name
 GoalType=Type
 GoalFrequency=Frequency
