front end da gestao de categorias feito

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -40,3 +40,16 @@ GoalStartDate=Start Date
 GoalFinalDate=Final Date
 GoalTotalValue=Total Value
 GoalFavorite=Favorite
+
+Categories=Categories
+CategoriesListTitle=Categories List
+CategoriesListDesc=Here you can access and manage all your categories. Each category can be used when creating goals.
+EmptyListCategories=You don't have any category. Add your first! Click on plus button!
+
+EditCategory=Edit Category
+AddCategory=Add Category
+RemoveCategory=Remove Category
+RemoveCategoryDesc= Do you really want remove the category?
+
+CategoryName=Name of the Category
+CategoryDesc=Description of the Category 
