Commit Gestão do Perfil 26/04/2019

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -10,7 +10,7 @@ UserBirthDate= Birth Date
 UserPassword= Password
 UserRetypePassword= Retype password
 UserGender= Gender
-
+UserPass = New Password
 GoalListTitle=Goal List
 GoalListFiltersButton=Filters
 GoalListDesc=Here you can access and manage all your goals. You also can filter your goals. Press the next button to see all possible filters.
@@ -25,7 +25,7 @@ CreateGoalDesc= Define your goal as you want.
 EditGoalTitle= Edit your Goal.
 EditGoalDesc= Edit your goal as you want.
 EditGoal=Edit Goal
-
+EditProfile=Edit Profile
 RemoveGoal=Remove Goal
 RemoveGoalDesc= Do you really want remove the goal?
 
