history feito. Falta recuperar goals (ao recuperar mete a flag a false, a finaldate a null e current value a 0)

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -52,4 +52,9 @@ RemoveCategory=Remove Category
 RemoveCategoryDesc= Do you really want remove the category?
 
 CategoryName=Name of the Category
-CategoryDesc=Description of the Category 
+CategoryDesc=Description of the Category
+
+History=History
+GoalDoneListTitle= List of Done Goals 
+GoalDoneListDesc= Here you can access and manage all your done goals. You also can recover goals.
+EmptyListDoneGoals= The system does not have any done goal.
