Recuperar goals feito

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -58,3 +58,6 @@ History=History
 GoalDoneListTitle= List of Done Goals 
 GoalDoneListDesc= Here you can access and manage all your done goals. You also can recover goals.
 EmptyListDoneGoals= The system does not have any done goal.
+
+RecoveryDoneGoal= Recovery Done Goal
+RecoveryDoneGoalDesc= If you recovery a done goal it will be listed in dashboard as reseted.
