--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -55,6 +55,10 @@ CategoryName=Name of the Category
 CategoryDesc=Description of the Category
 
 History=History
+Trophy=Trophy
+TrophyDoneListDesc= Here you can access and manage all your done trophies.
+TrophyDoneListValue=List of Value of the trophies
+TrophyDoneListName=List of Name of the trophies
 GoalDoneListTitle= List of Done Goals 
 GoalDoneListDesc= Here you can access and manage all your done goals. You also can recover goals.
 EmptyListDoneGoals= The system does not have any done goal.
