add goal as a history, done, i think ahaha

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -30,18 +30,18 @@ RemoveGoal=Remove Goal
 RemoveGoalDesc= Do you really want remove the goal?
 
 
-GoalName=Goal Name
-GoalType=Type
-GoalFrequency=Frequency
-GoalCategory=Category
-GoalStatus=Status
-GoalDescription=Description
-GoalStartDate=Start Date
-GoalFinalDate=Final Date
-GoalTotalValue=Total Value
-GoalFavorite=Favorite
+GoalName=I want to 
+GoalType=With the type
+GoalFrequency=With the frequency:
+GoalCategory= With the category
+GoalStatus=With the Status
+GoalDescription=With the description
+GoalStartDate=Which Start in
+GoalFinalDate=And End In
+GoalTotalValue=With the total value
+GoalFavorite=And is 
 
-Categories=Categories
+Categories=Which belongs to the category
 CategoriesListTitle=Categories List
 CategoriesListDesc=Here you can access and manage all your categories. Each category can be used when creating goals.
 EmptyListCategories=You don't have any category. Add your first! Click on plus button!
