Algumas correcoes de erros

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -51,6 +51,13 @@ AddCategory=Add Category
 RemoveCategory=Remove Category
 RemoveCategoryDesc= Do you really want remove the category?
 
+CreateCategoryTitle= Create your Category.
+CreateCategoryDesc= Define your category as you want.
+
+EditCategoryTitle= Edit your Category.
+EditCategoryDesc= Edit your category as you want.
+
+
 CategoryName=Name of the Category
 CategoryDesc=Description of the Category
 
