--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -41,7 +41,7 @@ GoalFinalDate=And End In
 GoalTotalValue=With the total value
 GoalFavorite=And is 
 
-Categories=Which belongs to the category
+Categories= Categories
 CategoriesListTitle=Categories List
 CategoriesListDesc=Here you can access and manage all your categories. Each category can be used when creating goals.
 EmptyListCategories=You don't have any category. Add your first! Click on plus button!
