Filters done (not tested...)

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -72,3 +72,5 @@ EmptyListDoneGoals= The system does not have any done goal.
 
 RecoveryDoneGoal= Recovery Done Goal
 RecoveryDoneGoalDesc= If you recovery a done goal it will be listed in dashboard as reseted.
+
+Filter= Filter
