Commit editar todos os campos user. Por terminar listagem dtoUser inicial

--- a/cricketWeb/src/java/Bundle.properties
+++ b/cricketWeb/src/java/Bundle.properties
@@ -14,7 +14,7 @@ UserPass = New Password
 GoalListTitle=Goal List
 GoalListFiltersButton=Filters
 GoalListDesc=Here you can access and manage all your goals. You also can filter your goals. Press the next button to see all possible filters.
-
+Age= Age
 FilterGoalName=Goal Name
 
 EmptyListGoals=You don't have any goal. Add your first! Click on plus button!
@@ -63,6 +63,7 @@ CategoryDesc=Description of the Category
 
 History=History
 Trophy=Trophy
+User=User
 TrophyDoneListDesc= Here you can access and manage all your done trophies.
 TrophyDoneListValue=List of Value of the trophies
 TrophyDoneListName=List of Name of the trophies
@@ -72,3 +73,4 @@ EmptyListDoneGoals= The system does not have any done goal.
 
 RecoveryDoneGoal= Recovery Done Goal
 RecoveryDoneGoalDesc= If you recovery a done goal it will be listed in dashboard as reseted.
+H3EditProfile= Edit Profile
