--- a/cricketWeb/nbproject/project.properties
+++ b/cricketWeb/nbproject/project.properties
@@ -49,6 +49,7 @@ javac.classpath=\
     ${file.reference.javax.faces-api-2.1.jar}:\
     ${file.reference.javax.faces-api-2.1.jar-1}:\
     ${reference.cricketDTO.jar}
+    ${libs.primefaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -75,7 +76,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.cricketDTO=../cricketDTO
